force-app/main/default/objects/Contributor_Skill__c/Contributor_Skill__c.object-meta.xml
<CustomObject>
    <label>Contributor Skill</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Contributor Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributor Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>