force-app/main/default/objects/Contributor_Skill__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <label>Contributor</label>
    <referenceTo>Contributor__c</referenceTo>
    <relationshipLabel>Contributor Skills</relationshipLabel>
    <relationshipName>Contributor_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>