force-app/main/default/objects/Contributor_Skill__c/fields/Primary_Skill__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Skill</label>
    <type>Checkbox</type>
</CustomField>